<resources>
    <string name="app_name">TutionApp</string>
    <string name="name_of_student">Name of student:</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="standard">Standard:</string>
    <string name="enter_the_standard">Enter the Standard</string>
    <string name="name_of_school">Name of School :</string>
    <string name="enter_the_school_name">Enter the school name</string>
    <string name="medium">Medium :</string>
    <string name="enter_the_medium">Enter the Medium</string>
    <string name="enter_the_fees">Enter the fees</string>
    <string name="tution_fees">Tution Fees :</string>
    <string name="phone_number">Phone number :</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="send">Send</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="date_of_joining">Date of joining :</string>
</resources>